--- a/latex/livro-salvar.tex
+++ b/latex/livro-salvar.tex
@@ -2412,7 +2412,7 @@ o único gênero \emph{Squatina} \citep{compagno2005}. % (Compagno, 2005).
 
 \begin{figure}
 \begin{center}
-\includegraphics[height=0.8\textheight]{cacoes-anjo}
+\includegraphics[height=0.8\textheight]{CACOES-ANJO}
 \end{center}
 \caption[As três espécies de cação-anjo da Plataforma Sul: 
 	 \emph{Squatina guggenheim}, \emph{Squatina occulta} e 
@@ -2706,7 +2706,7 @@ filhotes nascem com seus otólitos plenamente formados.
 
 \begin{figure}
 \begin{center}
-\includegraphics[height=0.7\textheight]{anjo-utero}
+\includegraphics[height=0.7\textheight]{ANJO-UTERO}
 \end{center}
 \caption[Câmara útero-cloacal de \emph{Squatina guggenheim}]
 	{A gestação de \emph{Squatina guggenheim}, com nas fotos (a) e (b) a cavidade abdominal 
@@ -2750,7 +2750,7 @@ a duração de três anos: dois anos para a maturação dos ovócitos, e um ano 
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{ovario-occulta}
+\includegraphics[width=\textwidth]{OVARIO-OCCULTA}
 \end{center}
 \caption[Ovário de \emph{Squatina occulta}]
 	{Um ovário de \emph{Squatina occulta} com sete folículos contendo ovócitos maduros.}
@@ -2794,7 +2794,7 @@ oeste dos EUA após oito anos de pesca intensiva \citep{bonfil1994}. % (Bonfil, 
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Guggenheim_DistribProf}
+\includegraphics[width=\textwidth]{GUGGENHEIM_DISTRIBPROF}
 \end{center}
 \caption[A freqüência de ocorrência do cação-anjo-espinhoso \emph{Squatina guggenheim} 
 	em relação com a profundidade, nas estações de arrasto de 
@@ -2817,7 +2817,7 @@ oeste dos EUA após oito anos de pesca intensiva \citep{bonfil1994}. % (Bonfil, 
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Guggenheim_mapa_Distribuicao_CPUE}
+\includegraphics[width=\textwidth]{GUGGENHEIM_MAPA_DISTRIBUICAO_CPUE}
 \end{center}
 \caption[Variação sazonal da distribuição espacial da CPUE em kg/hora, do cação-anjo-espinhoso \emph{Squatina guggenheim}]
 	{A variação sazonal da distribuição espacial da CPUE em kg/hora, do cação-anjo-espinhoso \emph{Squatina guggenheim} 
@@ -2864,7 +2864,7 @@ de todas as fêmeas prenhes, e a dispersão de outros indivíduos da população
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Guggenheim_CPUExProfTrimestres}
+\includegraphics[width=\textwidth]{GUGGENHEIM_CPUEXPROFTRIMESTRES}
 \end{center}
 \caption[Variação sazonal da densidade populacional do cação-anjo-espinhoso \emph{Squatina guggenheim}]
 	{A variação sazonal da densidade populacional do cação-anjo-espinhoso \emph{Squatina guggenheim} 
@@ -2883,7 +2883,7 @@ de todas as fêmeas prenhes, e a dispersão de outros indivíduos da população
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Guggenheim_DistribTempFundo}
+\includegraphics[width=\textwidth]{GUGGENHEIM_DISTRIBTEMPFUNDO}
 \end{center}
 \caption[Freqüência de ocorrência (FO) do cação-anjo-espinhoso \emph{Squatina guggenheim}
 	 com relação à temperatura de fundo]
@@ -2921,7 +2921,7 @@ essa área durante o ano todo (Capítulo~\ref{chap:pesca-industrial}, Figura~\re
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Guggenheim_HistogramaPraia}
+\includegraphics[width=\textwidth]{GUGGENHEIM_HISTOGRAMAPRAIA}
 \end{center}
 \caption[Composição de comprimento das capturas  do cação-anjo-espinhoso \emph{Squatina guggenheim} 
 	 pela pesca artesanal com arrastão de praia]
@@ -2939,7 +2939,7 @@ essa área durante o ano todo (Capítulo~\ref{chap:pesca-industrial}, Figura~\re
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Guggenheim_mapa_neonatos}
+\includegraphics[width=\textwidth]{GUGGENHEIM_MAPA_NEONATOS}
 \end{center}
 \caption[Ocorrências de neonatos do cação-anjo-espinhoso \emph{Squatina guggenheim} na Plataforma Sul]
 	{Ocorrências de neonatos do cação-anjo-espinhoso \emph{Squatina guggenheim} na Plataforma Sul, 
@@ -2961,7 +2961,7 @@ essa área durante o ano todo (Capítulo~\ref{chap:pesca-industrial}, Figura~\re
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Occulta_DistribProf}
+\includegraphics[width=\textwidth]{OCCULTA_DISTRIBPROF}
 \end{center}
 \caption[A freqüência de ocorrência do cação-anjo-de-asa-curta \emph{Squatina occulta} 
 	em relação com a profundidade, nas estações de arrasto de 
@@ -2983,7 +2983,7 @@ essa área durante o ano todo (Capítulo~\ref{chap:pesca-industrial}, Figura~\re
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Occulta_mapa_Distribuicao_CPUE}
+\includegraphics[width=\textwidth]{OCCULTA_MAPA_DISTRIBUICAO_CPUE}
 \end{center}
 \caption[Variação sazonal da distribuição espacial da CPUE em kg/hora, do cação-anjo-de-asa-curta \emph{Squatina occulta}]
 	{A variação sazonal da distribuição espacial da CPUE em kg/hora, do cação-anjo-de-asa-curta \emph{Squatina occulta} 
@@ -3019,7 +3019,7 @@ ao longo do ano toda a população de \emph{S. occulta} da Plataforma Sul (Capí
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Occulta_CPUExProfTrimestres}
+\includegraphics[width=\textwidth]{OCCULTA_CPUEXPROFTRIMESTRES}
 \end{center}
 \caption[Variação sazonal da densidade populacional do cação-anjo-de-asa-curta \emph{Squatina occulta}]
 	{A variação sazonal da densidade populacional do cação-anjo-de-asa-curta \emph{Squatina occulta} 
@@ -3038,7 +3038,7 @@ ao longo do ano toda a população de \emph{S. occulta} da Plataforma Sul (Capí
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{Occulta_DistribTempFundo}
+\includegraphics[width=\textwidth]{OCCULTA_DISTRIBTEMPFUNDO}
 \end{center}
 \caption[Freqüência de ocorrência (FO) do cação-anjo-de-asa-curta \emph{Squatina occulta}
 	 com relação à temperatura de fundo]
@@ -3189,7 +3189,7 @@ na presente análise.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{CPUEsafraAnjos}
+\includegraphics[width=\textwidth]{CPUESAFRAANJOS}
 \end{center}
 \caption[Captura por Unidade de Esforço (CPUE) em ton/viagem, 
 	 dos cações-anjo \emph{Squatina guggenheim} e \emph{Squatina occulta}, em conjunto, na Plataforma Sul, 
@@ -3275,7 +3275,7 @@ Anos 				& Arrasto simples		& Arrasto de parelha	\\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{Anjos_CPUExDecadas}
+\includegraphics[width=0.8\textwidth]{ANJOS_CPUEXDECADAS}
 \end{center}
 \caption[Variação temporal da Captura por Unidade de Esforço em kg/hora de arrasto de fundo, 
 	 do cação-anjo-espinhoso \emph{Squatina guggenheim} e do cação-anjo-de-asa-curta \emph{S. occulta} 
@@ -3352,7 +3352,7 @@ proteção possível da pesca na Plataforma Sul.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{DesembarquesTotaisAnjos}
+\includegraphics[width=\textwidth]{DESEMBARQUESTOTAISANJOS}
 \end{center}
 \caption[A variação temporal da captura anual dos cações-anjo \emph{Squatina guggenheim} 
 	e \emph{Squatina occulta}, em conjunto, 
@@ -3493,7 +3493,7 @@ pesca com captura de cações-anjo nas águas costeiras  ao sul da latitude de 3
 % As duas espécies em conjunto se distribuem sobre essa área como um todo. Para a conservação 
 % de \emph{S. guggenheim} e \emph{S. occulta} no Brasil, um objetivo necessário é que impacto da pesca sobre 
 % essas espécies seja o mais próximo possível a zero, principalmente na plataforma continental ao sul 
-% da latitude de 32°30'S. % <- COMPLICADO !!!!!!
+% da latitude de 32°30'S.
 
 % A área das profundidades de 5 a 30~m ao longo de toda a costa ao sul da latitude de 32°30'S 
 % constitui o berçário de \emph{S. guggenheim}. Todas as fêmeas prenhes de \emph{S. guggenheim} migram para 
